# credentials-themes

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  catalog-info.yaml  codecov.yml  openedx.yaml  package-lock.json  package.json  pyproject.toml  setup.py  tox.ini  webpack.config.js
.github/workflows/: ci.yml  create_credentials_requirements_pr.yml  create_tag_on_merge_to_master.yml  patch_version_on_requirements_update.yml  upgrade-python-requirements.yml
.tx/: config
conf/locale/: requirements.txt
conf/locale/en/LC_MESSAGES/: django.mo  django.po
edx_credentials_themes/conf/locale/en/LC_MESSAGES/: django.mo
edx_credentials_themes/conf/locale/eo/LC_MESSAGES/: django.po
edx_credentials_themes/conf/locale/es_419/LC_MESSAGES/: django.mo  django.po
edx_credentials_themes/locale/: config.yaml
edx_credentials_themes/locale/en/LC_MESSAGES/: django.mo  django.po
edx_credentials_themes/locale/eo/LC_MESSAGES/: django.mo  django.po
edx_credentials_themes/locale/es_419/LC_MESSAGES/: django.mo  django.po
edx_credentials_themes/static/: .gitignore
edx_credentials_themes/static/css/: mitpe.certificate.style-ltr.css  mitpe.certificate.style-rtl.css
edx_credentials_themes/static/edx.org/base/sass/: _base.scss  _components.scss  _config.scss  _layouts.scss  _lib.scss  _print.scss  _utilities.scss
edx_credentials_themes/static/edx.org/base/sass/views/: _masquerade-banner.scss  _program-record.scss  _records-list.scss  certificate.scss
edx_credentials_themes/static/edx.org/certificates/sass/: _build.scss  _components-rendering.scss  _layouts-rendering.scss  _lib.scss  _print-rendering.scss  _utilities.scss  certificate-ltr.scss  certificate-rtl.scss
edx_credentials_themes/static/edx.org/css/: edx.org.base.style-ltr.css  edx.org.base.style-rtl.css  edx.org.certificate.style-ltr.css  edx.org.certificate.style-rtl.css
edx_credentials_themes/static/mitpe/certificates/css/: mitpe.certificate.style-rtl.css
edx_credentials_themes/static/mitpe/certificates/sass/: _build.scss  _components-rendering.scss  _print-rendering.scss  _print.scss  _utilities.scss
edx_credentials_themes/static/mitpe/css/: mitpe.certificate.style-ltr.css  mitpe.certificate.style-rtl.css
edx_credentials_themes/static/mitpe/sass/: _base.scss  _build.scss  _components-rendering.scss  _layouts-rendering.scss  _lib.scss  _print-rendering.scss  _utilities.scss
edx_credentials_themes/static/wharton/css/: wharton.certificate.style-ltr.css  wharton.certificate.style-rtl.css
edx_credentials_themes/templates/edx.org/: _base_style.html  _footer.html  _header.html
edx_credentials_themes/templates/edx.org/credentials/: programs.html  records.html
edx_credentials_themes/templates/edx.org/credentials/programs/: base.html
edx_credentials_themes/templates/edx.org/credentials/programs/micromasters/: certificate.html
edx_credentials_themes/templates/edx.org/credentials/programs/professional-certificate/: certificate.html
edx_credentials_themes/templates/edx.org/credentials/programs/xseries/: certificate.html
edx_credentials_themes/templates/mitpe/: _footer.html  _header.html
edx_credentials_themes/templates/mitpe/credentials/programs/: base.html
edx_credentials_themes/templates/mitpe/credentials/programs/07748f41-9ef7-4654-b0af-f95da3b09d32/: certificate.html
edx_credentials_themes/templates/mitpe/credentials/programs/144da4f2-fe27-42f7-8127-a33406ef19df/: certificate.html
edx_credentials_themes/templates/mitpe/credentials/programs/2873f364-dc80-4419-bd7c-7f56a2de59d5/: certificate.html
edx_credentials_themes/templates/mitpe/credentials/programs/57a18492-8ea8-4295-ba1f-d25b46a2d218/: certificate.html
edx_credentials_themes/templates/mitpe/credentials/programs/588cef66-70c8-450b-a1b2-e5ebd70ee1fe/: certificate.html
edx_credentials_themes/templates/mitpe/credentials/programs/588cef6670c8450ba1b2e5ebd70ee1fe/: certificate.html
edx_credentials_themes/templates/mitpe/credentials/programs/c8f689f4-8418-41bd-a73b-64c1459c1bb2/: certificate.html
edx_credentials_themes/templates/mitpe/credentials/programs/d5b225db-1597-4677-b202-31ba5a18613e/: certificate.html
edx_credentials_themes/templates/mitpe/credentials/programs/f4cb742d-93fd-4463-8b30-d730c0b1eec3/: certificate.html
edx_credentials_themes/templates/mitpe/credentials/programs/professional-certificate/: certificate.html
edx_credentials_themes/templates/wharton/: _header.html
edx_credentials_themes/templates/wharton/credentials/programs/: base.html
edx_credentials_themes/templates/wharton/credentials/programs/professional-certificate/: certificate.html
requirements/: base.in  base.txt  constraints.txt  i18n.txt  pip.in  pip.txt  pip_tools.txt  test.in  test.txt  travis.txt
src/edx_credentials_themes/static/edx.org/base/sass/: _base.scss  _utilities.scss
src/edx_credentials_themes/static/edx.org/base/sass/views/: _records-list.scss
src/edx_credentials_themes/static/edx.org/css/: edx.org.base.style-ltr.css  edx.org.base.style-rtl.css  edx.org.certificate.style-rtl.css
src/edx_credentials_themes/templates/edx.org/: _footer.html
src/edx_credentials_themes/templates/edx.org/credentials/: programs.html  records.html
src/edx_credentials_themes/templates/edx.org/credentials/programs/: base.html
src/edx_credentials_themes/templates/edx.org/credentials/programs/microbachelors/: certificate.html
(+1 files in other folders)
